--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -34,6 +34,8 @@ es:
         company:
           base:
             not_valid_company_id: "El id ingresado no corresponde a ninguna compañia válida"
+          user_id:
+            not_valid_user_id: "El id del usuario no corresponde al usuario actual"
         employee:
           base:
             not_valid_employee_id: "El id ingresado no corresponde a ningún empleado válido"
